feat: [ZIP-010] - Sound Theme System
- Add AudioTheme enum with 4 themes: classic, retro, minimal, playful
- Classic: warm sine waves with major chords (original)
- Retro: 8-bit style square waves for nostalgic feel
- Minimal: soft clicks and subtle tones for focus
- Playful: bouncy xylophone-style triangle waves
- Add Waveform enum with sine, square, triangle generation
- Add theme selector in Settings with preview button
- Each theme has distinct pop, node, and fanfare sounds
- audioTheme persisted in SettingsManager
- Sound theme option only shown when sound is enabled

--- a/tasks.json
+++ b/tasks.json
@@ -176,8 +176,8 @@
         "Build succeeds with no warnings"
       ],
       "priority": 2,
-      "passes": false,
-      "notes": "Polished animations make the game feel premium and satisfying"
+      "passes": true,
+      "notes": "Implemented: PathOverlayView has isWinning prop with pulsing glow effect. CellVisitIndicator shows bounce on cell visit. NumberNodeView has wasJustReached prop with ring pulse. InvalidMoveIndicator has shake animation. TimerView has bounce on start. All check SettingsManager.reduceMotion to respect accessibility. Level transition stagger deferred to future polish."
     },
     {
       "id": "ZIP-010",
