docs: Update tasks.json and progress.txt for ZIP-017

--- a/tasks.json
+++ b/tasks.json
@@ -326,8 +326,8 @@
         "Build succeeds with no warnings"
       ],
       "priority": 3,
-      "passes": false,
-      "notes": "Accessibility expands audience and is required for some markets"
+      "passes": true,
+      "notes": "Implemented: AccessibleGridView wrapper with VoiceOver support including accessibilityLabel, accessibilityHint, and accessibilityActions for Move Up/Down/Left/Right, Undo, and Available Moves. UIAccessibility.post announcements for position changes. highContrastMode in SettingsManager with toggle in Settings Accessibility section. GridLinesView respects highContrastMode with 2x line width and full opacity. reduceTransparency and isVoiceOverRunning computed properties added. Undo button has accessibilityLabel, accessibilityHint, and accessibilityValue showing available moves. SwiftUI Dynamic Type works by default. Reduce Motion was already respected via reduceMotion checks on animations."
     },
     {
       "id": "ZIP-018",
