feat: [ZIP-018] - Full Integration & Polish
Added Info.plist with deep linking (zipswift://daily, zipswift://easy,
zipswift://hard) and launch screen configuration. Verified all ZIP-001
through ZIP-017 features integrated and working. All 100 unit tests pass.
Build succeeds.

--- a/tasks.json
+++ b/tasks.json
@@ -348,8 +348,8 @@
         "Full playthrough testing of all features"
       ],
       "priority": 4,
-      "passes": false,
-      "notes": "Final integration ensuring all systems work together seamlessly"
+      "passes": true,
+      "notes": "Implemented: All ZIP-001-017 features integrated and working. Main navigation in GameView header: History, Settings, Achievements, Daily Challenge, Level Packs, Challenge Modes, Leaderboards. Settings organized into 8 logical sections (Audio & Feedback, Accessibility, Appearance, Gameplay, Data, Help, About, App Info). Added Info.plist with CFBundleURLTypes for zipswift:// deep linking scheme and UILaunchScreen with AccentColor background. Deep linking handles zipswift://daily, zipswift://easy, zipswift://hard via NotificationCenter. GameCenterManager authenticates on app launch. All 100 unit tests pass. Build succeeds."
     }
   ]
 }
